<resources>
    <string name="app_name">FT-AND-03_U-2_C-1</string>
    <string name="welcome_txt">WELCOME</string>
    <string name="masai_school_is_a_21st_century_coding_txt">Masai School is a 21st century coding</string>
    <string name="sign_in_txt">Sign In</string>
    <string name="create_an_account_txt">Create an Account</string>
    <string name="sign_up_txt">SIGN UP</string>
    <string name="welcome_back_txt">Welcome back</string>
    <string name="continue_to_sign_up_txt">Continue to Sign Up!</string>
    <string name="name_txt">Name</string>
    <string name="enter_the_name_txt">Enter the name</string>
    <string name="email_txt">Email</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="password_txt">Password</string>
    <string name="enter_password_txt">Enter Password</string>
    <string name="have_an_account_txt">Have an Account ?</string>
</resources>