<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_dark"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_80"
        android:text="@string/welcome_txt"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_22"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/dp_20"
        android:text="@string/masai_school_is_a_21st_century_coding_txt"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="school that cares about you!"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_50"
        android:src="@drawable/people_icon" />

    <Button
        android:id="@+id/btnSignMainActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginEnd="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@drawable/bg_rect_white"
        android:text="@string/sign_in_txt"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_dark" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginEnd="@dimen/dp_50"
        android:background="@drawable/bg_rect_black"
        android:text="@string/create_an_account_txt"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />


</LinearLayout>